# small_size_league_expert

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  api.py  article.md  bot_explanation.md  discord_bot.py  discord_settings.py  docker-compose.yml  env.example  main.py  pyproject.toml
.github/workflows/: ci.yml
knowledge/: content_description.txt  full_ssl_website.txt  small_size_league_rules.txt
src/small_size_league_expert/: crew.py  main.py  models.py  settings.py
src/small_size_league_expert/config/: agents.yaml  tasks.yaml
src/small_size_league_expert/tools/: __init__.py  wikipedia_tool.py
src/small_size_league_promoter/: crew.py  main.py  models.py  settings.py
src/small_size_league_promoter/config/: agents.yaml  tasks.yaml
src/small_size_league_promoter/tools/: __init__.py  custom_tool.py  ssl_mcp_tool.py  tdp_search_tool.py  wikipedia_tool.py
